<resources>
    <string name="app_name">NetPicks</string>
    <string name="leftToRightMessage">Left Swipes: %1$d</string>
    <string name="RightToLeftMessage">Right Swipes: %1$d</string>
    <string name="createRoom">Create Room</string>
    <string name="joinRoom">Join Room</string>
    <string name="EnterRoomID">Enter the Room ID</string>
    <string name="RoomID">RoomID:</string>
    <string name="NumberPeople">Number of People: </string>
    <string name="Continue">Continue</string>
    <string name="NetPicks">NetPicks</string>
    <string name="SwipeLeft">Swipe Left</string>
    <string name="SwipeRight">Swipe Right</string>
    <string name="moviepost">MoviePost</string>
    <string name="MovieTitle">Movie Title</string>
    <string name="introduction">Introduction</string>
    <string name="end_match">End Match</string>
    <string name="end_session">End Session</string>
    <string name="Like">Likes: </string>
    <string name="open_youtube">Open Youtube</string>
</resources>