<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Netpicks"
        android:layout_width="142dp"
        android:layout_height="56dp"
        android:text="@string/NetPicks"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/moviePosterImageView1"
        android:layout_width="83dp"
        android:layout_height="136dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView
        android:id="@+id/moviePosterImageView2"
        android:layout_width="83dp"
        android:layout_height="141dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <ImageView
        android:id="@+id/moviePosterImageView3"
        android:layout_width="83dp"
        android:layout_height="144dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <TextView
        android:id="@+id/MovieTitle2"
        android:layout_width="165dp"
        android:layout_height="95dp"
        android:text="@string/MovieTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/MovieTitle1"
        android:layout_width="164dp"
        android:layout_height="84dp"
        android:text="@string/MovieTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/MovieTitle3"
        android:layout_width="164dp"
        android:layout_height="68dp"
        android:text="@string/MovieTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/continue_match"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MovieTitle2"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/end_session"
        android:layout_width="128dp"
        android:layout_height="49dp"
        android:layout_alignParentEnd="true"
        android:text="@string/end_session"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/continue_match"
        app:layout_constraintTop_toBottomOf="@+id/MovieTitle2"
        app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/openGoogleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="10dp"
        android:text="Open Google"
        app:layout_constraintBottom_toTopOf="@+id/MovieTitle1"
        app:layout_constraintEnd_toStartOf="@+id/like_1"
        app:layout_constraintStart_toEndOf="@+id/moviePosterImageView1"
        app:layout_constraintTop_toBottomOf="@+id/MovieTitle3" />

    <Button
        android:id="@+id/openGoogleButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text="Open Google"
        app:layout_constraintBottom_toTopOf="@+id/MovieTitle2"
        app:layout_constraintEnd_toStartOf="@+id/like_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/moviePosterImageView2"
        app:layout_constraintTop_toBottomOf="@+id/MovieTitle1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/openGoogleButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open Google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/like_3"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toEndOf="@+id/moviePosterImageView3"
        app:layout_constraintTop_toBottomOf="@+id/MovieTitle2"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/like_2"
        android:layout_width="84dp"
        android:layout_height="94dp"
        android:text="@string/Like"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/MovieTitle1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/like_1"
        android:layout_width="84dp"
        android:layout_height="94dp"
        android:text="@string/Like"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MovieTitle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/like_3"
        android:layout_width="84dp"
        android:layout_height="94dp"
        android:text="@string/Like"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/MovieTitle3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <ImageView
        android:id="@+id/thumb1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/thumbup"
        app:layout_constraintBottom_toBottomOf="@+id/like_1"
        app:layout_constraintEnd_toEndOf="@+id/like_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/like_1"
        app:layout_constraintTop_toTopOf="@+id/like_1"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/thumb2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/thumbup"
        app:layout_constraintBottom_toBottomOf="@+id/like_2"
        app:layout_constraintEnd_toEndOf="@+id/like_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/like_2"
        app:layout_constraintTop_toTopOf="@+id/like_2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/thumb3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/moviepost"
        android:scaleType="fitCenter"
        android:src="@drawable/thumbup"
        app:layout_constraintBottom_toBottomOf="@+id/like_3"
        app:layout_constraintEnd_toEndOf="@+id/like_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/like_3"
        app:layout_constraintTop_toTopOf="@+id/like_3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>